<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Njuke_host</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="prevSongString"><![CDATA[<<]]></string>
    <string name="playpauseString">► / ll</string>
    <string name="nextSongString"><![CDATA[>>]]></string>
    <string name="overviewTabName">OVERVIEW</string>
    <string name="playlistTabName">PLAYLIST</string>
    <string name="votersTabName">VOTERS</string>
    <string name="initial_vote_button_text">+1</string>
    <string name="list_item_artist">Artist</string>
    <string name="list_item_song_title">Title</string>
    <string name="stopString">■</string>

    <string-array name="source_array">
        <item>Local</item>
        <item>Spotify</item>
        <item>Another music source</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
