<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    tools:context="njuke.njuke_host.ui.musicplayer.MusicPlayerFragment">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playpauseString"
        android:id="@+id/playToggleBtn"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextSongString"
        android:id="@+id/nextBtn"
        android:layout_gravity="bottom"
        android:layout_toStartOf="@+id/playToggleBtn"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/playToggleBtn" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Artist"
        android:id="@+id/songArtist"
        android:layout_toEndOf="@+id/songTitle"
        android:layout_above="@+id/nextBtn"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Song name"
        android:id="@+id/songTitle"
        android:layout_above="@id/songArtist"
        android:layout_marginLeft="10dp" />


    <SeekBar
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_gravity="bottom"
        android:layout_toStartOf="@+id/nextBtn"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/stopBtn"
        android:layout_toEndOf="@+id/stopBtn"
        android:layout_toLeftOf="@+id/nextBtn" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopString"
        android:id="@+id/stopBtn"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>

